[project]
name = "humblebundle-downloader"
version = "0.4.4"
description = "Download your Humble Bundle library (Forked Version)"
authors = [{name = "Eddy Hintze", email = "eddy@gitx.codes"},
{name = "ckolos", email = "ckolos@gmail.com"},]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.3",
    "parsel>=1.9.1",
]

[project.urls]
homepage = "https://github.com/ckolos/humblebundle-downloader"
repository = "https://github.com/ckolos/humblebundle-downloader"

[project.optional-dependencies]
test = [
    "pytest>=8.3.2",
]

[project.scripts]
humblebundle_downloader = "humblebundle_downloader.cli:cli"
hbd = "humblebundle_downloader.cli:cli"

[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["humblebundle_downloader"]

[tool.ruff]
line-length = 80
exclude = [
    ".tox",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".cache",
    ".eggs",
    "examples",
    "lib",
    "lib64",
    "include",
]

[tool.ruff.lint]
select = ["E", "F", "N"]
